--- a/_includes/modal.html
+++ b/_includes/modal.html
@@ -43,6 +43,7 @@
 
 <script>
 var slideIndex = 1;
+var slideTimer;
 showSlides(slideIndex);
 
 function plusSlides(n) {
@@ -57,6 +58,7 @@ function showSlides(n) {
   var i;
   var slides = document.getElementsByClassName("mySlides");
   var dots = document.getElementsByClassName("dot");
+  clearTimeout(slideTimer);
   if (n > slides.length) {slideIndex = 1}
   if (n < 1) {slideIndex = slides.length}
   for (i = 0; i < slides.length; i++) {
@@ -70,6 +72,6 @@ function showSlides(n) {
 
   slideIndex++;
   if (slideIndex > slides.length) {slideIndex = 1}
-  setTimeout(showSlides, 3000); // Change image every 2 seconds
+  slideTimer = setTimeout(showSlides, 3000); // Change image every 2 seconds
 }
 </script>
