--- a/_includes/card.html
+++ b/_includes/card.html
@@ -2,10 +2,10 @@
   <div class="card">
     <div class="card-img embed">
 
-      <img class="img-flex" src="{{site.baseurl}}/images/SquarePrev.jpg" alt="">
-      <a href="{{site.baseurl}}{{post.url}}" class="pin-b-r gradient embed-item embed-4-by-3comp content-fill">
-        <div class="padding-b zindex-3 title push-0 align-center">
-          <h4 class="text-center pad-0 b-r">{{include.title}}</h4>
+      <img class="img-flex" src="{{site.baseurl}}/images/{{include.data.preview}}" alt="">
+      <a href="{{site.baseurl}}{{include.data.url}}" class="pin-b-r gradient embed-item embed-4-by-3comp content-fill">
+        <div class="zindex-3 title push-0 vertical-align align-center">
+          <h4 class="text-center pad-0 b-r">{{include.data.title}}</h4>
         </div>
       </a>
 
