--- a/_includes/logo-head.html
+++ b/_includes/logo-head.html
@@ -1,6 +1,6 @@
-<ul class="absolute list-group-inline pin-tc unit [ xs-1 s-1 m-1 l-1 ]">
-  <li class="logo-head">
-    <div>
+<ul class="grid list-group-inline pin-tc unit zindex-3 [ xs-1 s-1 m-1 l-1 ]">
+  <li class="unit [ xs-1 s-1 m-1 l-1 ]">
+    <div class="w-1">
       <a href="{{site.baseurl}}/gallery">
         <svg id="cylkatest" width="219.7" height="108.2" viewBox="0 -10 219.7 108.2">
           <path fill="none" stroke="#40aba9" stroke-linecap="round" stroke-linejoin="round" stroke-width="12" d="M148.5 32.5L136 45.1 150.2 63c16.4 16.4 44.2 9.9 41.3-21 0 0-2-10.9-13.8-10.9-4.5 0-14 2.8-15 14.9-.7 9 5.3 16.9 13.5 17 12.4 0 15.7-11 15.6-18.3.3 7.7.9 15.1 2.9 18.2-2.1-2.9-3.9-13.9-2.4-29.9"/>
