--- a/_includes/modal.html
+++ b/_includes/modal.html
@@ -2,28 +2,26 @@
   <div class="slideshow-container">
     <div class="mySlides fade">
         <a href="{{site.baseurl}}/design" >
-          <img src="images/trans_test_banner.png" style="width:100%">
+          <img src="images/carosel/DDN_preview.png" style="width:100%">
         </a>
       <div class="gradient" style="width:100%">
-        <div class="text">
-        Category
-        </div>
+        <div class="text">Daily Dino News</div>
       </div>
 
     </div>
 
     <div class="mySlides fade">
-      <a href="{{site.baseurl}}/design" >
-        <img src="images/trans_test_banner.png" style="width:100%">
+      <a href="{{site.baseurl}}/news/2017/06/24/Ottawa-International-Animation-Festival-2017" >
+        <img src="images/carosel/OIAF_preview.png" style="width:100%">
       </a>
-      <div class="text">Caption Two</div>
+      <div class="text">OIAF 2017</div>
     </div>
 
     <div class="mySlides fade">
-        <a href="{{site.baseurl}}/design" >
-          <img src="images/trans_test_banner.png" style="width:100%">
+        <a href="{{site.baseurl}}/news/2017/03/10/Love-Buds/" >
+          <img src="images/carosel/LoveBuds_preview.png" style="width:100%">
         </a>
-      <div class="text">Caption Three</div>
+      <div class="text">Love Buds</div>
     </div>
 
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -37,7 +35,7 @@
   </div>
 
   <div class="pad-t hover text-center">
-    <a class="btn" href="{{site.baseurl}}/gallery">Gallery</a>
+    <a class="btn" href="{{site.baseurl}}/gallery">Full Gallery</a>
   </div>
 </div>
 
