--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,57 +4,78 @@
   <meta charset="utf-8">
   <title>Cecilia Bleszynski Portfolio</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="{{site.baseurl}}/css/modules.css" rel="stylesheet">
-  <link href="{{site.baseurl}}/css/grid.css" rel="stylesheet">
-  <link href="{{site.baseurl}}/css/type.css" rel="stylesheet">
-  <link href="{{site.baseurl}}/css/main.css" rel="stylesheet">
-  <link href="{{site.baseurl}}/css/theme.css" rel="stylesheet">
+  <link href="{{site.baseurl}}/css/site.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Quicksand:300,400,700" rel="stylesheet">
 </head>
 <body>
 
-  <section class="frame pad-b-0">
+  <section class="frame pad-b-2">
 
-    <main class="relative">
+    <main class="wrapper pad-t relative">
       {{content}}
     </main>
 
 
   </section>
 
-  <div class="pin-b-c border">
-      <div class="footer">
+  <div class="pin-b-c">
+      <div class="frame footer pad-b-2">
 
       <ul class="list-group-inline">
         <li class="">
           <a class="block" href="https://www.facebook.com/Cecilz.On.Wheels">
-            <i class="icon i-32">
-              <svg><use xlink:href="{{site.baseurl}}/icons/000/main_sheet.svg#facebook" /></svg>
-            </i>
+            <svg id="copyright" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 233.3 233.3">
+              <title>facebook</title>
+              <path d="M58.7,228.3H52.3A47.3,47.3,0,0,1,5,181V52.3A47.3,47.3,0,0,1,52.3,5H181a47.3,47.3,0,0,1,47.3,47.3V181A47.3,47.3,0,0,1,181,228.3H154.4V156.1l28.6-1,3.2-35-31.8,1V106.3c0-9.5,2-15.8,11.6-17.9s22.3-.1,22.3-.1V49.1s-25.5,0-42.4,1S114.1,62.9,112,80.9s-3.2,39.2-3.2,39.2H89.7v38.1h20.1v68.9H89" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="10"/>
+            </svg>
           </a>
         </li>
 
         <li class="">
           <a class="block" href="http://cbleszynski.tumblr.com/">
-            <i class="icon i-32">
-              <svg><use xlink:href="{{site.baseurl}}/icons/000/main_sheet.svg#tumblr" /></svg>
-            </i>
+            <svg id="copyright" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 234.6 234.6">
+              <title>insta</title>
+              <path d="M42.4,75.2c-3.1,22.9-1.2,55.6-1.4,74.3S51.3,190.7,78.6,191s65.3,3.1,81.8.9c18.1-2.5,30-17.7,32-42.4s2.2-51.2.7-70.8-18-34.6-37.7-35.9-26.9-.6-43.1-.8-34.6-.6-46.8,3.8S44.4,61.5,42.4,75.2Z" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="14"/>
+              <path d="M58.2,228.4H51.8A47.3,47.3,0,0,1,5,180.5L6.3,51.8A47.3,47.3,0,0,1,54.1,5L182.8,6.3a47.3,47.3,0,0,1,46.8,47.8l-1.3,128.7a47.3,47.3,0,0,1-47.8,46.8l-99.9-1" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="10"/>
+              <circle cx="117.3" cy="117.3" r="34.9" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"/>
+              <circle cx="161.1" cy="73.6" r="10" fill="#fff" stroke="none"/>
+            </svg>
           </a>
         </li>
 
         <li class="">
           <a class="block" href="https://www.instagram.com/ceciliableszynski/">
-            <i class="icon i-32">
-              <svg><use xlink:href="{{site.baseurl}}/icons/000/main_sheet.svg#instagram" /></svg>
-            </i>
+            <svg id="copyright" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 233.3 233.3">
+              <title>twitter</title>
+              <path d="M154.5,58.5c7.5,0,14.7,2.8,21.2,8.3a7.5,7.5,0,0,0,4.8,2.1,7,7,0,0,0,2.7-.6L199,62.5c-2.2,7.2-12.4,17-12.3,17.3l15.9-3.9.7.5c-3.6,3.8-7,7.9-11,11.2s-4.6,5.8-4.7,10.2c-1.4,43.9-31.4,85.5-80.1,93.2a95,95,0,0,1-14.2,1c-18.2,0-37.5-4.8-49.8-13.1,7.7-1.3,16-2.1,24-3.9s15.3-5.9,22.7-11.9c-15.4-1.6-25.4-8.7-31.1-22.3l13.4-.9c.1-.4.1-.7.2-1.1-15.5-5-24.4-15.1-25.9-32l13.9,3.5.6-.9C47.2,97.3,43.3,83,51.2,65.1c18.6,21.4,41.5,33.1,69.6,35.1,0-3.7-.2-7.1,0-10.4,1-13.6,8-23.2,20.4-28.4a34.4,34.4,0,0,1,13.3-2.9m0-1a35.9,35.9,0,0,0-13.7,2.9c-12.7,5.4-20,15.5-21,29.3-.2,2.3-.1,4.6-.1,7a21.8,21.8,0,0,0,.1,2.5C92.6,96.9,70.4,85.6,51.9,64.4l-1-1.1-.6,1.4c-7.6,17.3-4.7,31.7,8.9,44.2l-4.6-1.2L47,105.9l-1.3-.4v1.4c1.4,16.1,9.4,26.6,24.5,32.1l-11.3.8H57.6l.5,1.3c5.6,13.3,15,20.5,29.6,22.7-6.9,5.3-13.5,8.6-20.4,10.2s-11.3,2.1-16.8,2.8l-7.1,1.1-2.5.4,2.1,1.4C55.1,187.9,74.4,193,93.3,193a95.8,95.8,0,0,0,14.4-1,92.7,92.7,0,0,0,58.4-33.4,101.6,101.6,0,0,0,22.5-60.8c.1-4.5,1.3-7,4.3-9.4a72.7,72.7,0,0,0,7.9-7.8c1-1.2,2.1-2.4,3.2-3.5l.8-.9-.9-.6-.7-.5-.4-.3h-.4l-3.8.9-9.1,2.3c3.2-3.6,8.8-10,10.5-15.3l.6-2-1.9.7-5.3,2-10.6,3.9a6.8,6.8,0,0,1-2.3.5,6.3,6.3,0,0,1-4.1-1.9c-6.8-5.6-14.2-8.5-21.9-8.5Z" />
+              <path d="M93.3,192.5c-18.8,0-38-5-50.1-13.2l-1-.7,1.2-.2,7.2-1.1c5.5-.8,11.2-1.6,16.8-2.8,7.3-1.7,14.2-5.2,21.6-11.1-15.1-1.9-24.8-9-30.4-22.5l-.3-.6,13.8-.9v-.2c-15.9-5.3-24.4-15.9-25.8-32.3v-.7l14.3,3.5v-.2C46.3,97,43,82.4,50.7,64.9l.3-.7.6.6c18.6,21.3,41.1,32.8,68.7,34.9,0-1-.1-2-.1-3s-.1-4.7.1-7c1-13.6,8.1-23.5,20.7-28.8A34.9,34.9,0,0,1,154.5,58c7.6,0,14.9,2.9,21.5,8.4,1.7,1.4,3,2,4.5,2a7.9,7.9,0,0,0,2.5-.5l16.8-6.3-.3,1c-1.7,5.6-8,12.5-11,15.8l-.5.6,14.7-3.7,1.4,1-.4.4-3.3,3.5a63.9,63.9,0,0,1-7.8,7.8c-3.6,2.8-4.4,5.9-4.5,9.8a100.9,100.9,0,0,1-22.4,60.5,92.9,92.9,0,0,1-58.1,33.2A94.4,94.4,0,0,1,93.3,192.5Z" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="10"/>
+              <path d="M154.5,58.5c7.5,0,14.7,2.8,21.2,8.3a7.5,7.5,0,0,0,4.8,2.1,7,7,0,0,0,2.7-.6L199,62.5c-2.2,7.2-12.4,17-12.3,17.3l15.9-3.9.7.5c-3.6,3.8-7,7.9-11,11.2s-4.6,5.8-4.7,10.2c-1.4,43.9-31.4,85.5-80.1,93.2a95,95,0,0,1-14.2,1c-18.2,0-37.5-4.8-49.8-13.1,7.7-1.3,16-2.1,24-3.9s15.3-5.9,22.7-11.9c-15.4-1.6-25.4-8.7-31.1-22.3l13.4-.9c.1-.4.1-.7.2-1.1-15.5-5-24.4-15.1-25.9-32l13.9,3.5.6-.9C47.2,97.3,43.3,83,51.2,65.1c18.6,21.4,41.5,33.1,69.6,35.1,0-3.7-.2-7.1,0-10.4,1-13.6,8-23.2,20.4-28.4a34.4,34.4,0,0,1,13.3-2.9m0-1a35.9,35.9,0,0,0-13.7,2.9c-12.7,5.4-20,15.5-21,29.3-.2,2.3-.1,4.6-.1,7a21.8,21.8,0,0,0,.1,2.5C92.6,96.9,70.4,85.6,51.9,64.4l-1-1.1-.6,1.4c-7.6,17.3-4.7,31.7,8.9,44.2l-4.6-1.2L47,105.9l-1.3-.4v1.4c1.4,16.1,9.4,26.6,24.5,32.1l-11.3.8H57.6l.5,1.3c5.6,13.3,15,20.5,29.6,22.7-6.9,5.3-13.5,8.6-20.4,10.2s-11.3,2.1-16.8,2.8l-7.1,1.1-2.5.4,2.1,1.4C55.1,187.9,74.4,193,93.3,193a95.8,95.8,0,0,0,14.4-1,92.7,92.7,0,0,0,58.4-33.4,101.6,101.6,0,0,0,22.5-60.8c.1-4.5,1.3-7,4.3-9.4a72.7,72.7,0,0,0,7.9-7.8c1-1.2,2.1-2.4,3.2-3.5l.8-.9-.9-.6-.7-.5-.4-.3h-.4l-3.8.9-9.1,2.3c3.2-3.6,8.8-10,10.5-15.3l.6-2-1.9.7-5.3,2-10.6,3.9a6.8,6.8,0,0,1-2.3.5,6.3,6.3,0,0,1-4.1-1.9c-6.8-5.6-14.2-8.5-21.9-8.5Z" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="10"/><path d="M58.7,228.3H52.3A47.3,47.3,0,0,1,5,181V52.3A47.3,47.3,0,0,1,52.3,5H181a47.3,47.3,0,0,1,47.3,47.3V181A47.3,47.3,0,0,1,181,228.3H81.1" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="10"/>
+            </svg>
           </a>
         </li>
       </ul>
     </div>
 
-      <svg class="relative copyright" id="copyright" width="100%" height="50" viewBox="0 0 98 7" opacity=".3">
-      <path d="M0 4.3a4.2 4.2 0 0 1 .3-1.6A4.3 4.3 0 0 1 2.7.3 4.2 4.2 0 0 1 4.3 0 4.2 4.2 0 0 1 6 .3a4.3 4.3 0 0 1 2.3 2.4 4.2 4.2 0 0 1 .3 1.7A4.2 4.2 0 0 1 8.3 6 4.4 4.4 0 0 1 6 8.3a4.2 4.2 0 0 1-1.7.3 4.2 4.2 0 0 1-1.7-.3A4.4 4.4 0 0 1 .3 6 4.2 4.2 0 0 1 0 4.3zm7.8 0A3.5 3.5 0 0 0 7.5 3a3.6 3.6 0 0 0-.7-1.1 3.5 3.5 0 0 0-1.1-.8L4.3.8 3 1.1a3.5 3.5 0 0 0-1.1.8A3.6 3.6 0 0 0 1.1 3a3.6 3.6 0 0 0 0 2.8 3.6 3.6 0 0 0 .7 1.1 3.5 3.5 0 0 0 1.2.7l1.4.3 1.4-.3a3.5 3.5 0 0 0 1.1-.8 3.6 3.6 0 0 0 .7-1.1 3.5 3.5 0 0 0 .2-1.4zm-1.2.8a2.7 2.7 0 0 1-.3.8l-.5.6-.6.4h-.7l-1.1-.1-.8-.6a2.5 2.5 0 0 1-.5-.9 3.1 3.1 0 0 1-.2-1.1 3.3 3.3 0 0 1 .2-1.1 2.5 2.5 0 0 1 .5-.9l.8-.6 1.1-.2h.8l.7.3.5.6a2.2 2.2 0 0 1 .3.8h-1L5.7 3l-.3-.3-.4-.2H3.8l-.6.5-.3.6a2.3 2.3 0 0 0-.1.7 2.2 2.2 0 0 0 .1.7l.3.6.5.4.7.2a1.3 1.3 0 0 0 .9-.3 1.3 1.3 0 0 0 .5-.8zm9.2 1.6a1.9 1.9 0 0 1-.1.8l-.4.6-.6.4-.8.2h-.7l-.6-.3-.5-.6a2.2 2.2 0 0 1-.2-1V2a2.1 2.1 0 0 1 .1-.8l.4-.6.6-.4.8-.2.8.2.6.4.4.6a2.2 2.2 0 0 1 .1.8v.5h-1.1v-.4a1 1 0 0 0-.2-.6.7.7 0 0 0-.6-.3.6.6 0 0 0-.6.3 1.5 1.5 0 0 0-.1.7v4.4a1.1 1.1 0 0 0 .2.6.6.6 0 0 0 .6.3h.5l.2-.3a1.1 1.1 0 0 0 .1-.4v-.6h1.2zm2.1-.7v.8a.6.6 0 0 0 .2.4l.4.2a.5.5 0 0 0 .5-.2v-.3h1.2a2 2 0 0 1-.1.7l-.4.6-.6.4h-.8l-1-.2a1.6 1.6 0 0 1-.8-1.2 4.5 4.5 0 0 1 0-.7v-2a4.5 4.5 0 0 1 0-.7 1.6 1.6 0 0 1 .8-1.2l1-.2h.8l.6.4.4.6a2.2 2.2 0 0 1 .1.7V6zm0-1h1.2v-.6a.7.7 0 0 0-.2-.5l-.4-.2-.4.2a.7.7 0 0 0-.2.5zm4.6 1.9a.6.6 0 0 0 .2.4l.4.2a.5.5 0 0 0 .5-.2v-.4h1.2a2 2 0 0 1-.1.7l-.4.6-.6.4h-.8l-1-.2a1.6 1.6 0 0 1-.8-1.2 4.5 4.5 0 0 1 0-.7v-2a4.5 4.5 0 0 1 0-.7 1.6 1.6 0 0 1 .8-1.2l1-.2h.8l.6.4.4.6a2.3 2.3 0 0 1 .1.8h-1.1a.8.8 0 0 0-.2-.5l-.4-.2-.4.2a.7.7 0 0 0-.2.5zM25.6.1h1.2v1.2h-1.2zm0 2.5h1.2v6h-1.2zM27.8.1H29v6.8a.7.7 0 0 0 .1.5l.5.2v1.1h-.8l-.6-.3a1.2 1.2 0 0 1-.4-.5 2.5 2.5 0 0 1-.1-.9zm2.3 0h1.2v1.2h-1.2zm0 2.5h1.2v6h-1.2zM34.7 8l-.5.5-.7.2H33l-.4-.2-.3-.5a2.3 2.3 0 0 1-.1-.8 4.4 4.4 0 0 1 .1-.9 1.4 1.4 0 0 1 .3-.6l.6-.4h1.5v-.9a.9.9 0 0 0-.1-.5l-.6-.2-.4.2a.7.7 0 0 0-.3.5h-1.1a2 2 0 0 1 .5-1.4l.6-.4h1.5l.6.4.4.6a2.3 2.3 0 0 1 .1.8v4.2h-1.2zm0-2h-.3l-.7.2a.8.8 0 0 0-.3.7.9.9 0 0 0 .2.6l.5.2.5-.2a.9.9 0 0 0 .2-.6zM39.1.1h1.8l1 .2.7.5a1.8 1.8 0 0 1 .4.7 2.9 2.9 0 0 1 .1.8v.3a2.8 2.8 0 0 1-.1.6l-.2.4-.3.3-.4.3a1.3 1.3 0 0 1 .6.6 2.4 2.4 0 0 1 .3 1v.5a2.5 2.5 0 0 1-.5 1.7 2.3 2.3 0 0 1-1.7.6h-1.7zm1.2 3.5h.6a.9.9 0 0 0 .8-.3 1.6 1.6 0 0 0 .2-.9 1.4 1.4 0 0 0-.2-.9 1 1 0 0 0-.8-.3h-.5zm0 3.8h1.1l.3-.3a1.1 1.1 0 0 0 .1-.5V6a3.8 3.8 0 0 0 0-.6V5l-.3-.2h-1.2zM44.1.1h1.2v6.8a.7.7 0 0 0 .1.5l.5.2v1.1h-.8l-.6-.3a1.2 1.2 0 0 1-.4-.5A2.5 2.5 0 0 1 44 7zM47.5 6v.8a.6.6 0 0 0 .2.4l.4.2a.5.5 0 0 0 .5-.2v-.3h1.2a2 2 0 0 1-.1.7l-.4.6-.6.4h-.8l-1-.2a1.6 1.6 0 0 1-.8-1.2 4.5 4.5 0 0 1 0-.7v-2a4.5 4.5 0 0 1 0-.7 1.6 1.6 0 0 1 .8-1.2l1-.2h.8l.6.4.4.6a2.2 2.2 0 0 1 .1.7V6zm0-1h1.2v-.6a.7.7 0 0 0-.2-.5l-.4-.2-.4.2a.7.7 0 0 0-.2.5zm5.5-.8a.6.6 0 0 0-.2-.5l-.4-.2-.4.2a.6.6 0 0 0-.2.4.7.7 0 0 0 .1.3l.4.3.7.3a1.7 1.7 0 0 1 .9.7 2 2 0 0 1 .3 1 1.8 1.8 0 0 1-.1.7l-.4.6-.6.4h-1.4l-.6-.3-.4-.6a2 2 0 0 1-.2-.8h1.2a1.1 1.1 0 0 0 .2.5.5.5 0 0 0 .5.2l.5-.2a.6.6 0 0 0 .2-.5.7.7 0 0 0-.1-.4l-.5-.3-.6-.2a2 2 0 0 1-.9-.6 1.6 1.6 0 0 1-.3-1 1.8 1.8 0 0 1 .1-.7l.4-.6.6-.4h1.4l.5.4.4.6a1.9 1.9 0 0 1 .1.7zm1.7 3.4l2-4h-1.8V2.5h3.2v1l-2 4h2v1.1h-3.4zm4.9-5.1l.8 3.8.8-3.8h1.3l-1.7 7.2a2.2 2.2 0 0 1-.3.7l-.4.4-.5.2h-.9V9.9h.6l.2-.2.2-.5.2-.8-1.6-5.9zm3.4 0h1.2v.6l.5-.5.7-.2h.5l.4.3.3.5a1.9 1.9 0 0 1 .1.7v4.7h-1.2V4.4a.8.8 0 0 0-.2-.5l-.4-.2a.5.5 0 0 0-.5.2 1.2 1.2 0 0 0-.1.6v4.1H63zm6.9 1.7a.6.6 0 0 0-.2-.5l-.4-.2-.4.2a.6.6 0 0 0-.2.4.7.7 0 0 0 .1.3l.4.3.7.3a1.7 1.7 0 0 1 .9.7 2 2 0 0 1 .3 1 1.8 1.8 0 0 1-.1.7l-.4.6-.6.4h-1.4l-.6-.2-.4-.6a2 2 0 0 1-.2-.8h1.2a1.1 1.1 0 0 0 .2.5.5.5 0 0 0 .5.2l.5-.2a.6.6 0 0 0 .2-.5.7.7 0 0 0-.1-.4l-.5-.3-.6-.2a2 2 0 0 1-.9-.6 1.6 1.6 0 0 1-.3-1 1.8 1.8 0 0 1 .1-.7l.4-.6.6-.4H70l.5.4.4.6a1.9 1.9 0 0 1 .1.7zm2-4.1h1.2v5.1l1.5-2.7h1.2L74.4 5l1.8 3.6h-1.4L73.7 6l-.6.9v1.7h-1.2zm4.7 0h1.2v1.2h-1.2zm0 2.5h1.2v6h-1.2zm4.3 4.9l2.2-4.2a1.5 1.5 0 0 0 .2-.5 5.7 5.7 0 0 0 0-.6v-.7l-.2-.2h-.3l-.4.2a.6.6 0 0 0-.2.5v.7h-1.3v-.8a1.8 1.8 0 0 1 .1-.7l.4-.6.6-.4.7-.2.8.2.6.5a2 2 0 0 1 .3.7 3.2 3.2 0 0 1 .1.8v1.3l-.2.5-1.9 3.4h2.2v1.2h-3.7zm4.5-5.7a1.9 1.9 0 0 1 .1-.8l.5-.5.6-.4H88l.6.4.4.6a1.9 1.9 0 0 1 .1.8v5a1.9 1.9 0 0 1-.1.8l-.4.6-.6.4h-1.5l-.5-.5-.4-.6a1.9 1.9 0 0 1-.1-.8zm1.2 5a.6.6 0 0 0 .2.4l.4.2.4-.2a.6.6 0 0 0 .2-.4v-5a.6.6 0 0 0-.2-.4l-.4-.2-.4.2a.6.6 0 0 0-.2.4zm4.7-5.4l-1.2.9V1l1.2-.9h1.2v8.5h-1.2zm5.5-.2h-1.4v1h-1.1V.1H98v1.2l-2.1 7.3h-1.3z"/>
+    <svg class="island" id="copyright" xmlns="http://www.w3.org/2000/svg" width="100%" height="100" viewBox="0 0 1197.2 102.6">
+      <title>copyright2018</title>
+        <path d="M69.3,43.7A34.7,34.7,0,1,1,35.2,8.8C53.8,8.8,69.3,24.6,69.3,43.7Zm-61.8,0c0,15.4,12.3,28,27.3,28s27.1-12.6,27.1-28S49.8,15.6,35.2,15.6,7.5,27.9,7.5,43.7ZM49.1,29.8a3.9,3.9,0,0,1-4,4.1,9.3,9.3,0,0,1-3.4-.9,11.4,11.4,0,0,0-4.6-.9c-6.1,0-9.6,4.2-9.6,11.4s3.6,11.1,9.7,11.1c2.2,0,2.2,0,6.2-1.7a5.8,5.8,0,0,1,2.1-.5,4.1,4.1,0,0,1,4,4.3c0,3.8-5.2,6.6-12.3,6.6-12,0-20-8-20-20.1S25.4,23.4,37,23.4C44.3,23.4,49.1,26,49.1,29.8Z" fill="#a5a5a5"/>
+        <path d="M164.4,19.4c0,4-2.6,6.8-6.2,6.8-1.5,0-2.5-.3-5.6-1.6a18.3,18.3,0,0,0-8-1.7c-10.5,0-16.8,7.8-16.8,20.9s6.3,20.6,16.9,20.6c3.8,0,3.8,0,10.6-3.1a9.3,9.3,0,0,1,3.4-.8c3.4,0,6.2,3.2,6.2,7,0,6.5-8.5,11.2-20.2,11.2-20.1,0-33.3-14-33.3-35.3S125,8.6,144.5,8.6C156.4,8.6,164.4,13,164.4,19.4Z" fill="#a5a5a5"/>
+        <path d="M187.9,56.5c2.2,5.9,5.9,8.7,11.7,8.7,3.5,0,4.4-.3,12.1-4.1a8.3,8.3,0,0,1,3.2-.7,6.3,6.3,0,0,1,5.9,6c0,6-10.7,11.6-22,11.6-15.7,0-26.7-10.6-26.7-25.6s10.7-27.1,25.2-27.1,24.4,11.1,24.4,25.4c0,4.1-1.9,5.8-6.4,5.8Zm19.3-10a15.9,15.9,0,0,0-2.1-5.4,9.1,9.1,0,0,0-7.5-3.8c-4.9,0-8.1,2.8-10.2,9.2Z" fill="#a5a5a5"/>
+        <path d="M267.8,28.3a7.8,7.8,0,0,1,4.1,6.7c0,3.6-2.6,6.6-5.8,6.6-1.3,0-1.7-.1-5.3-1.5a14.3,14.3,0,0,0-5.3-1.1c-6.3,0-10.8,5.3-10.8,12.7s4.5,12.6,11.2,12.6a14.5,14.5,0,0,0,5.8-1.4c2.5-1.2,2.9-1.3,4.2-1.3,3.4,0,6.1,2.9,6.1,6.7a7.1,7.1,0,0,1-2.8,5.4c-3.5,2.6-9.2,4.3-14.7,4.3a23.3,23.3,0,0,1-17.8-7.6C232,65.3,230,59.7,230,51.5s2.7-15,7.6-19.4a26.7,26.7,0,0,1,17.5-6.8A27.4,27.4,0,0,1,267.8,28.3Z" fill="#a5a5a5"/>
+        <path d="M300.4,12.2a8.6,8.6,0,1,1-17.1,0,8.6,8.6,0,0,1,17.1,0Zm-16,23.2c0-3.5.1-4.4,1-6.1a7.3,7.3,0,0,1,12.7,0c.9,1.7,1,2.5,1,6.1V67.9c0,3.5-.1,4.4-1,6.1a7.3,7.3,0,0,1-12.7,0c-.9-1.7-1-2.5-1-6.1Z" fill="#a5a5a5"/>
+        <path d="M328.7,67.9c0,3.5-.1,4.4-1,6.1A7.3,7.3,0,0,1,315,74c-.9-1.7-1-2.5-1-6.1V13.4c0-3.5.1-4.4,1-6a7.2,7.2,0,0,1,6.4-3.7,7.3,7.3,0,0,1,6.3,3.6c.9,1.7,1,2.5,1,6.1Z" fill="#a5a5a5"/>
+        <path d="M359.4,12.2a8.6,8.6,0,1,1-17.1,0,8.6,8.6,0,0,1,17.1,0Zm-16,23.2c0-3.5.1-4.4,1-6.1a7.3,7.3,0,0,1,12.7,0c.9,1.7,1,2.5,1,6.1V67.9c0,3.5-.1,4.4-1,6.1a7.3,7.3,0,0,1-12.7,0c-.9-1.7-1-2.5-1-6.1Z" fill="#a5a5a5"/>
+        <path d="M420.5,69c0,5.2-3,8.7-7.4,8.7s-5.9-1.9-7.4-5.8C402,76.5,399,78,393.6,78a21.5,21.5,0,0,1-14.5-5.6q-8.7-7.7-8.7-21c0-8.1,2.4-14.2,7.7-19.4a21.3,21.3,0,0,1,15.3-6.7c5.2,0,8.3,1.5,12.5,5.8,1.6-3.9,3.8-5.5,7.3-5.5a7.3,7.3,0,0,1,7.3,7.5ZM385.1,51.5c0,7.7,4,12.8,10.2,12.8s10.1-5.2,10.1-12.7S401.3,39,395.2,39,385.1,44.1,385.1,51.5Z" fill="#a5a5a5"/><path d="M489.3,10.3c6.4,0,10.3,1.2,13.8,4.2A16.2,16.2,0,0,1,508.7,27c0,6.1-2.2,9.8-7.9,13.3,4.2,1.2,6.1,2.2,8.4,4.2a16.3,16.3,0,0,1,5.4,12.7c0,11.2-8.9,19.8-20.5,19.8H475.9c-8,.4-11.5-3.1-11.1-11.1V21.4c0-4.7.3-5.9,1.6-7.7s4.1-3.4,7.6-3.4h15.3Zm-1.6,25.4a6.2,6.2,0,0,0,6.5-6.4c0-3.3-3-5.7-7.1-5.7h-7V35.7Zm3,28c3.4,0,4.9-.5,6.3-2.2a7.2,7.2,0,0,0,1.7-4.8c0-4.9-2.8-7.3-8.4-7.3H480.1V63.7Z" fill="#a5a5a5"/><path d="M540.5,67.9c0,3.5-.1,4.4-1,6.1a7.3,7.3,0,0,1-12.7,0c-.9-1.7-1-2.5-1-6.1V13.4c0-3.5.1-4.4,1-6a7.2,7.2,0,0,1,6.4-3.7,7.3,7.3,0,0,1,6.3,3.6c.9,1.7,1,2.5,1,6.1Z" fill="#a5a5a5"/>
+        <path d="M567.3,56.5c2.2,5.9,5.9,8.7,11.7,8.7,3.5,0,4.4-.3,12.1-4.1a8.3,8.3,0,0,1,3.2-.7,6.3,6.3,0,0,1,5.9,6c0,6-10.7,11.6-22,11.6-15.7,0-26.7-10.6-26.7-25.6s10.7-27.1,25.2-27.1,24.4,11.1,24.4,25.4c0,4.1-1.9,5.8-6.4,5.8Zm19.3-10a15.9,15.9,0,0,0-2.1-5.4,9.1,9.1,0,0,0-7.5-3.8c-4.9,0-8.1,2.8-10.2,9.2Z" fill="#a5a5a5"/>
+        <path d="M646.9,35.4c0,3.3-2.7,6.4-5.7,6.4s-1.7,0-6.2-2a14.2,14.2,0,0,0-5.6-1.5c-2.4,0-3.9,1-3.9,2.6s.8,2.4,7.7,5.1,8.6,3.8,11.2,6.4a13.3,13.3,0,0,1,3.6,9.2c0,9.7-7.9,16.4-19.4,16.4-10,0-18.8-5-18.8-10.6,0-3.4,3-6.6,6.1-6.6s1.7,0,7.6,2.6a14.5,14.5,0,0,0,5.9,1.6c2.4,0,4.3-1.5,4.3-3.4s-1.1-2.6-5.6-4.3c-7.3-2.7-9.3-3.7-11.8-5.5s-5-5.8-5-10.6c0-9.1,8.1-15.9,18.9-15.9C639.1,25.3,646.9,30,646.9,35.4Z" fill="#a5a5a5"/><path d="M691.3,63.7c3.2,0,4,.1,5.6.9a6.6,6.6,0,0,1,3.3,5.7,6.8,6.8,0,0,1-3.3,5.8c-1.6.8-2.3.9-5.6.9H663c-5.1,0-7.6-1.7-7.6-5a7,7,0,0,1,1.7-4.4l20.5-28H664.4c-3.2,0-4-.1-5.5-.9a6.6,6.6,0,0,1-3.4-5.8,6.7,6.7,0,0,1,3.3-5.7c1.6-.8,2.3-.9,5.6-.9h28.3c3.4,0,6,2.3,6,5.3a8.9,8.9,0,0,1-2,5.1l-19.8,27Z" fill="#a5a5a5"/>
+        <path d="M738.9,32.6c2-5.2,4-7,7.8-7a7.4,7.4,0,0,1,7.5,7.1c0,1.8-.2,2.4-1.5,5.6L730.4,91.7c-2.2,5.1-4,6.7-7.8,6.7a7.3,7.3,0,0,1-7.3-7c0-1.7.2-2.3,1.5-5.5l5.8-13.5L708.1,38.1c-1.3-3-1.5-3.8-1.5-5.5a7.3,7.3,0,0,1,7.4-7c3.7,0,5.6,1.7,7.7,6.9l8.6,21.8Z" fill="#a5a5a5"/>
+        <path d="M764.6,34.2c0-5.2,3-8.6,7.5-8.6s5.4,1.5,6.8,5.1c4.3-4,7.8-5.4,13.5-5.4a19.1,19.1,0,0,1,12.8,4.4c3.9,3.5,5.3,7.1,5.3,14.1V67.9c0,3.5-.1,4.4-1,6.1a7.3,7.3,0,0,1-12.7,0c-.9-1.7-1-2.5-1-6.1V47.3c0-5.7-3.2-9.3-8.2-9.3a8.4,8.4,0,0,0-8.3,8.7V67.9c0,3.5-.1,4.4-1,6.1a7.3,7.3,0,0,1-12.7,0c-.9-1.7-1-2.5-1-6.1Z" fill="#a5a5a5"/>
+        <path d="M859.6,35.4c0,3.3-2.7,6.4-5.7,6.4s-1.7,0-6.2-2a14.2,14.2,0,0,0-5.6-1.5c-2.4,0-3.9,1-3.9,2.6s.8,2.4,7.7,5.1,8.6,3.8,11.2,6.4a13.3,13.3,0,0,1,3.6,9.2c0,9.7-7.9,16.4-19.4,16.4-10,0-18.8-5-18.8-10.6,0-3.4,3-6.6,6.1-6.6s1.7,0,7.6,2.6a14.5,14.5,0,0,0,5.9,1.6c2.4,0,4.3-1.5,4.3-3.4s-1.1-2.6-5.6-4.3c-7.3-2.7-9.3-3.7-11.8-5.5s-5-5.8-5-10.6c0-9.1,8.1-15.9,18.9-15.9C851.8,25.3,859.6,30,859.6,35.4Z" fill="#a5a5a5"/><path d="M887.1,67.9c0,3.5-.1,4.4-1,6.1a7.3,7.3,0,0,1-12.7,0c-.9-1.7-1-2.5-1-6.1V13.4c0-3.5.1-4.4,1-6.1a7.3,7.3,0,0,1,12.7,0c.9,1.7,1,2.5,1,6.1V42.9l13.5-13.8c2.9-3,4.4-3.8,6.7-3.8a7.2,7.2,0,0,1,7.2,7.3c0,2.2-.9,3.7-4,6.6L901.4,48l12.8,15.9c2.5,3.1,3.2,4.5,3.2,6.5a7.4,7.4,0,0,1-7.5,7.3c-2.7,0-4.3-1.1-7.1-4.7L887.1,52.9Z" fill="#a5a5a5"/>
+        <path d="M943.9,12.2a8.6,8.6,0,1,1-17.1,0,8.6,8.6,0,0,1,17.1,0Zm-16,23.2c0-3.5.1-4.4,1-6.1a7.3,7.3,0,0,1,12.7,0c.9,1.7,1,2.5,1,6.1V67.9c0,3.5-.1,4.4-1,6.1a7.3,7.3,0,0,1-12.7,0c-.9-1.7-1-2.5-1-6.1Z" fill="#a5a5a5"/>
+        <path d="M1023.3,63.5c3.2,0,4,.1,5.5.9a6.6,6.6,0,0,1,3.4,5.8,6.8,6.8,0,0,1-3.3,5.9c-1.6.8-2.3.9-5.6.9H994.6c-3.6,0-5.2-.5-6.7-2.1a6,6,0,0,1-1.8-4.3c0-2.4,1-4.1,4.1-7.5s16.7-19,18.9-21.8c4.4-5.8,6-9,6-12.2a6.4,6.4,0,0,0-6.4-6.6c-3.5,0-6.1,2.4-7.3,6.8s-1.6,5.5-2.7,6.6a5.6,5.6,0,0,1-4.6,1.9c-4.2,0-7-3-7-7.5,0-11.7,10.3-21.7,22.5-21.7s21.2,8.7,21.2,20.2c0,6.8-2.3,12.1-8.7,20a171.1,171.1,0,0,1-13.3,14.7Z" fill="#a5a5a5"/><path d="M1094.2,43.6c0,20.3-10.4,35.1-24.7,35.1a22.6,22.6,0,0,1-16.4-7.8c-5.6-6.5-8.2-15.2-8.2-27.8s2.8-20.5,8.2-26.7,10.5-7.8,16.3-7.8C1083.8,8.6,1094.2,23.3,1094.2,43.6Zm-33.6-.2c0,12.8,3.3,20.3,9,20.3s8.9-8.4,8.9-20.1-3.7-20-8.9-20S1060.6,31.1,1060.6,43.4Z" fill="#a5a5a5"/>
+        <path d="M1112.8,23.8c-3.2,0-4-.2-5.5-.9a6.7,6.7,0,0,1,0-11.7c1.5-.8,2.2-.9,5.5-.9h8.6c7.1-.4,10.2,2.7,9.8,9.8V67.9c0,3.5-.2,4.6-1,6.3a7.6,7.6,0,0,1-13.2,0c-.9-1.8-1-2.6-1-6.3V23.8Z" fill="#a5a5a5"/><path d="M1196.1,56.9c0,12.7-10.2,21.8-24.5,21.8S1147,69.6,1147,56.9c0-7.2,2.7-12.1,9.3-16.5-4.7-4.4-6.3-7.7-6.3-13,0-11.1,8.8-18.8,21.6-18.8s21.5,7.7,21.5,18.8c0,5.3-1.6,8.6-6.3,13C1193.4,44.8,1196.1,49.7,1196.1,56.9Zm-33.4-2a8.9,8.9,0,1,0,9-8.8A8.9,8.9,0,0,0,1162.7,54.9Zm2.1-26.6a6.8,6.8,0,1,0,6.9-6.7A6.7,6.7,0,0,0,1164.8,28.3Z" fill="#a5a5a5"/>
     </svg>
+
   </div>
 
 
