Fixed multiple errors

--- a/_includes/modal.html
+++ b/_includes/modal.html
@@ -34,8 +34,8 @@
     <span class="dot" onclick="currentSlide(3)"></span>
   </div>
 
-  <div class="pad-t hover text-center">
-    <a class="btn" href="{{site.baseurl}}/gallery">Full Gallery</a>
+  <div class="hover bracket gutter-1-2 fade" style="text-align:center">
+    <a class="btn micro" href="{{site.baseurl}}/gallery">Full Gallery</a>
   </div>
 </div>
 
